other/get-debug-information/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: abc
