other/get-debug-information/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: get-debug-data-policy
status:
  ready: true
