other/get-debug-information/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: get-debug-data
spec:
  steps:
  - name: step-00
    try:
    - apply:
        file: chainsaw-step-00-apply-1.yaml
    - apply:
        file: chainsaw-step-00-apply-2.yaml    
  - name: step-01
    try:
    - script:
        content: |
          if kubectl get configmap kyverno -n kyverno -o jsonpath='{.data.excludeGroups}' | grep -q 'system:nodes'; then
            kubectl patch configmap kyverno -n kyverno --type=json -p='[{"op": "remove", "path": "/data/excludeGroups"}]'
          else
            echo "excludeGroups: system:nodes does not exist in the configmap."
          fi
  - name: step-02
    try: 
    - apply:
        file: ../collect-debug-information.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-03
    try:
    - apply:
        file: ns.yaml
    - apply:
        file: depl-readonlyrootfs.yaml
  - name: step-04
    try: 
    - sleep:
        duration: 60s    
    - assert:
        resource:
          apiVersion: batch/v1
          kind: Job
          metadata:
            labels:
              app.kubernetes.io/managed-by: kyverno
              deleteme: allow
            namespace: abc
